cmake_minimum_required(VERSION 2.8)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_C_STANDARD 99)

add_executable(fib fib/fib.cpp)
add_executable(gcd-lcm gcd-lcm/gcd-lcm.cpp)
add_executable(grundy grundy/grundy.cpp)
add_executable(lis lis/lis.cpp)
add_executable(lis-fast lis-fast/lis-fast.cpp)
add_executable(lev-dist lev-dist/lev-dist.cpp)
